tests/e2e/semantics/mutation/string_substring_start_error.error
Error: syntax error in story at line 2, column 7

2|    b = a.substring(start: "1")
            ^^^^^^^^^^^^^^^

E0115: Mutation `substring` requires argument `start` to be of `int`, not `string`
